feat: Add feature to start new game
Add new game button that is shown once a user completes a game

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,11 @@
     gap: 35px;
 }
 
-.results {
+#results {
     margin-top: 10px;
     text-align: center;
+}
+
+#new-game {
+    margin-top: 10px;
 }
